--- a/index.html
+++ b/index.html
@@ -43,9 +43,10 @@
             <div class="wave">
                 <img class="wave-image" src="./images/waving-hand.svg" alt="waving-hand">
                 <p class="wave-text">Wave Me</p>
-            </div>
-         <div class="right-block">
+        </div>
+        <div class="right-block">
             <img class=main-image src="./images/mainphoto.svg" alt="main image">
+        </div>
 
     </section >
 
@@ -57,7 +58,7 @@
             <p class="text3">Our commitment to quality ensures that your applications get the best UI design possible. UI/UX design is more than just pixels and animations, but the entire application experience.</p>
         </div>
 
-        <div class="flex-row"></div>
+        <div class="flex-row">
             <div class="box">
                 <img class=box-image src="./images/data.svg" alt="data image">
                 <h3 class="box-title"> Website Ui</h3>
@@ -118,6 +119,7 @@
                      <p class="read-more-text"> Read More</p>
                  </div>
             </div>
+        </div>
      </section>
  </body>
 
