--- a/index.html
+++ b/index.html
@@ -44,6 +44,7 @@
                 <img class="wave-image" src="./images/waving-hand.svg" alt="waving-hand">
                 <p class="wave-text">Wave Me</p>
         </div>
+        </div>
         <div class="right-block">
             <img class=main-image src="./images/mainphoto.svg" alt="main image">
         </div>
